--- a/source/3-sinav-sorumlusu-gorevlendirme-yazisi.tex
+++ b/source/3-sinav-sorumlusu-gorevlendirme-yazisi.tex
@@ -60,7 +60,7 @@ Sayın \soyad,
 
 \vskip0.5cm
 
-İşletme Fakültesi'nin 2017-2018 Güz Yarıyılı'nda yürütmekte olduğunuz ders(ler)in, ekteki \emph{Sınav Programı}'nda belirtilen yarıyıl sonu sınav(lar)ında \emph{Sınav Sorumlusu} olarak görevlendirilmiş bulunuyorsunuz. Sınavların, \emph{İşletme Fakültesi Sınav Politikası}'nda belirtildiği şekilde yapılması için gereğini rica ederim.
+İşletme Fakültesi'nin 2017-2018 Güz Yarıyılı'nda yürütmekte olduğunuz ders(ler)in, ekteki \emph{Sınav Programı}'nda belirtilen yarıyıl sonu sınav(lar)ında, Ankara Yıldırım Beyazıt Üniversitesi Ön Lisans ve Lisans Eğitim-Öğretim Yönetmeliği'nin 26. Maddesi'nin 2. Fıkrası'na istinaden \emph{Sınav Sorumlusu} olarak görevlendirilmiş bulunuyorsunuz. Sınavların, \emph{İşletme Fakültesi Sınav Politikası}'nda belirtildiği şekilde yapılması için gereğini rica ederim.
 
 \vskip2cm
 
